--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mantine/core": "^5.10.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "@react-three/drei": "^9.56.22",
+    "@react-three/fiber": "^8.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.149.0",
     "axios": "^1.3.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
@@ -20,6 +24,7 @@
     "react-threejs": "0.0.4",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
+    "three": "^0.149.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
