--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mantine/core": "^5.10.3",
+    "@mantine/hooks": "^5.10.3",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@react-three/drei": "^9.56.22",
@@ -21,6 +22,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "react-threejs": "0.0.4",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
