--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-threejs": "0.0.4",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
