--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
@@ -26,6 +27,7 @@
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-threejs": "0.0.4",
+    "react-unity-webgl": "^9.4.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
     "three": "^0.149.0",
