--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-speech-recognition": "^3.10.0",
     "react-threejs": "0.0.4",
     "react-unity-webgl": "^9.4.0",
+    "react-use-keypress": "^1.3.1",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.2",
     "three": "^0.149.0",
